Services/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-externalname
spec:
  type: ExternalName
  externalName: www.sunlihui.com
  ports:
    - port: 80
